--- a/css/screen.css
+++ b/css/screen.css
@@ -119,6 +119,6 @@ a:active {color:#000000;}
 	font-family: "Lucida Console", Consolas, "Courier New", Courier, monospace
 }
 
-.posts ul{
+ul.posts{
 	list-style-type: none;
 }
