--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>{{ page.title }}</title>
+		<meta name="description" content="{{ page.description }}" />
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 	<link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
 	<link href='http://fonts.googleapis.com/css?family=Gentium+Basic' rel='stylesheet' type='text/css'>
