--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,13 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Ryan Schuetzler" />
-   <!-- link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" / -->
+   
+   <!-- OpenID stuff -->
+   <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" />
+   <link rel="openid2.local_id" href="http://www.google.com/profiles/101917908304099087510" />
+   
+   
+   <link href="http://feeds.feedburner.com/MasterSchuetzler" rel="alternate" title="Ryan Schuetzler" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
